--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,6 +14,7 @@
 @import "components/footer";
 @import "components/menu";
 @import "main";
+@import "mainindex";
 @import "contact";
 @import "mediaqueries";
 
