--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,40 +1,39 @@
 /**********************************************************/
 /*MEDIA QUERY*/
 @media screen and (min-width: $widthCell) {
-    .menu{
-        font-size:  $widthTabletFont;    
+    .menu {
+        font-size: $widthTabletFont;
     }
 
     .mainContact {
         @include grid-set (main, grid, 1rem, 1rem);
         grid-template-areas: "formulario infoContact"
-                            "formulario infoContact";
+            "formulario infoContact";
         align-content: center;
         justify-content: space-around;
         justify-items: center;
     }
 
     .mainAboutUs {
-        @include grid-set (main,grid,0.5rem, 0.5rem);
+        @include grid-set (main, grid, 0.5rem, 0.5rem);
         grid-template-areas: "mainAboutUsH2 mainAboutUsH2"
             "mainAboutUsImage mainAboutUsP"
             "mainAboutUsImage mainAboutUsP";
+        grid-row: 0.1fr 0.2fr 0.2fr;
         justify-content: center;
         justify-items: center;
+        align-content: flex-start;
     }
-
-    .serviceSelection {
-        @include grid-set (ServicesSelection,grid,0, 0);
-        grid-template-columns: 3fr 3fr;
-        grid-template-rows: 3fr 3fr;
-        justify-content:center space-between;
+    .mainServices {
+        @include grid-set (main, grid, 1rem, 1rem);
+        grid-template:"SeccionKids"" SeccionCorporativa""SeccionCattering ""SeccionBodas";
+        justify-content: center space-between;
         align-items: center;
         grid-row-gap: 30px;
-        grid-column-gap: 30px;
+        
     }
-
     .mainGallery {
-        @include grid-set (main,grid,1.2rem, 0.5rem);
+        @include grid-set (main, grid, 1.2rem, 0.5rem);
         align-content: center;
         justify-content: space-around;
         justify-items: center;
@@ -47,41 +46,42 @@
         display: none;
     }
 }
+
 @media screen and (min-width: $widthTablet) {
-    .menu{
-        font-size:  $widthTabletFont;    
+    .menu {
+        font-size: $widthTabletFont;
     }
 
     .mainContact {
         @include grid-set (main, grid, 1rem, 1rem);
         grid-template-areas: "formulario infoContact"
-                            "formulario infoContact";
+            "formulario infoContact";
         align-content: center;
         justify-content: space-around;
         justify-items: center;
     }
 
     .mainAboutUs {
-        @include grid-set (main,grid,0.5rem, 0.5rem);
+        @include grid-set (main, grid, 0.5rem, 0.5rem);
         grid-template-areas: "mainAboutUsH2 mainAboutUsH2"
             "mainAboutUsImage mainAboutUsP"
             "mainAboutUsImage mainAboutUsP";
+        grid-row: 0.1fr 0.2fr 0.2fr;
         justify-content: center;
         justify-items: center;
+        align-content: flex-start;
     }
 
-    .serviceSelection {
-        @include grid-set (ServicesSelection,grid,0, 0);
-        grid-template-columns: 3fr 3fr 3fr;
-        grid-template-rows: 1fr 1fr;
-        justify-content:center space-between;
+    .mainServices {
+        @include grid-set (main, grid, 0.5rem, 0.5rem);
+        grid-template:"SeccionKids SeccionCorporativa""SeccionCattering SeccionBodas";
+        justify-content: center space-between;
         align-items: center;
         grid-row-gap: 30px;
         grid-column-gap: 30px;
     }
-
     .mainGallery {
-        @include grid-set (main,grid,1.2rem, 0.5rem);
+        @include grid-set (main, grid, 1.2rem, 0.5rem);
         align-content: center;
         justify-content: space-around;
         justify-items: center;
@@ -94,10 +94,12 @@
         display: none;
     }
 }
+
 @media screen and (min-width: $widthHD1360) {
-    .menu{
-        font-size: $widthHD1360Font;    
+    .menu {
+        font-size: $widthHD1360Font;
     }
+
     .mainContact {
         @include grid-set (main, grid, 1rem, 1rem);
         grid-template-areas: "formulario infoContact";
@@ -106,27 +108,29 @@
         justify-content: space-around;
         justify-items: center;
     }
+
     .mainAboutUs {
-        @include grid-set (main,grid,1rem, 1rem);
+        @include grid-set (main, grid, 1rem, 1rem);
         grid-template-areas: "mainAboutUsH2 mainAboutUsH2 mainAboutUsH2"
             "mainAboutUsImage mainAboutUsImage mainAboutUsP"
             "mainAboutUsImage mainAboutUsImage mainAboutUsP";
+        grid-row: 0.1fr 0.2fr 0.2fr;
         justify-content: center;
         justify-items: center;
+        align-content: flex-start;
     }
 
-    .serviceSelection {
-        @include grid-set (ServicesSelection,grid,0, 0);
-        grid-template-columns: 3fr 3fr 3fr 3fr;
-        grid-template-rows: 3fr;
-        justify-content:center space-between;
+    .mainServices {
+        @include grid-set (main, grid, 1rem, 1rem);
+        grid-template:"SeccionKids SeccionCorporativa""SeccionCattering SeccionBodas";
+        justify-content: center space-between;
         align-items: center;
         grid-row-gap: 30px;
-        grid-column-gap: 30px;
+        
     }
 
     .mainGallery {
-        @include grid-set (main,grid,1.2rem, 0.5rem);
+        @include grid-set (main, grid, 1.2rem, 0.5rem);
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat($cantGalleryItems/4, 1fr);
         gap: 0.2rem;
