--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@
   width: 7rem;
   height: 7rem;
   border-radius: 50%;
-  background: radial-gradient(circle, #6AA84F, #4AF873);
+  background: url("../img/background3.png");
   margin: 0 auto;
   animation-name: logoItemAction;
   animation-duration: 10s;
@@ -46,7 +46,7 @@
 
 .headerLogoSubTitle {
   color: black;
-  font-size: 20px;
+  font-size: 16px;
   text-decoration: solid; }
 
 @keyframes logoItemAction {
@@ -122,53 +122,10 @@
   display: grid;
   margin: 1rem;
   padding: 1rem;
-  grid-template: "ServicesSelection" "SeccionKids" "SeccionEventosCorp" "SeccionCattering" "SeccionBodas";
+  grid-template: "SeccionKids" "SeccionCorporativa" "SeccionCattering" "SeccionBodas";
   justify-content: center space-between;
   align-items: center;
-  grid-template-rows: 0.2fr 0.5fr 0.5fr 0.5fr 0.5fr; }
-
-/*.mainServices {
-    @include grid-set (main, grid, 1rem, 1rem);
-    justify-content: center space-between;
-    align-items: center;
-    grid-row-gap: 30px;
-}*/
-.serviceSelection {
-  grid-area: ServicesSelection;
-  display: grid;
-  margin: 0.2rem;
-  padding: 0.2rem;
-  justify-content: center space-between;
-  align-items: center;
-  align-content: center; }
-
-.sectionKids {
-  grid-area: SeccionKids;
-  margin: 0.2rem;
-  padding: 0.2rem; }
-
-.sectionCorporative {
-  grid-area: SeccionEventosCorp;
-  margin: 0.2rem;
-  padding: 0.2rem; }
-
-.sectionCattering {
-  grid-area: SeccionCattering;
-  margin: 0.2rem;
-  padding: 0.2rem; }
-
-.sectionBodas {
-  grid-area: SeccionBodas;
-  margin: 0.2rem;
-  padding: 0.2rem; }
-
-.sectionClass h2 {
-  text-align: center;
-  font-size: 25px; }
-
-.sectionClass p {
-  text-align: center;
-  font-size: 20px; }
+  grid-row-gap: 30px; }
 
 /*contendor :tarjeta de los eventos
   Dentro de este
@@ -205,6 +162,26 @@
 
 p {
   text-align: center; }
+
+.eventKids {
+  grid-area: SeccionKids;
+  margin: 0.2rem;
+  padding: 0.2rem; }
+
+.eventCorporative {
+  grid-area: SeccionCorporativa;
+  margin: 0.2rem;
+  padding: 0.2rem; }
+
+.eventCattering {
+  grid-area: SeccionCattering;
+  margin: 0.2rem;
+  padding: 0.2rem; }
+
+.eventBodas {
+  grid-area: SeccionBodas;
+  margin: 0.2rem;
+  padding: 0.2rem; }
 
 .eventKids .eventImage,
 .eventKids .eventImage--hover {
@@ -246,7 +223,7 @@ p {
 
 .eventCard:hover .eventImage--hover {
   height: 100%;
-  opacity: 0.3; }
+  opacity: 0.1; }
 
 /************************************************************/
 /*EPagina Sobre Nosotros*/
@@ -257,8 +234,10 @@ p {
   margin: 1rem;
   padding: 1rem;
   grid-template-areas: "mainAboutUsH2" "mainAboutUsImage" "mainAboutUsP";
+  grid-row: 0.1fr 0.2fr 0.2fr;
   justify-content: center;
-  justify-items: center; }
+  justify-items: center;
+  align-content: flex-start; }
 
 .mainAboutUsImage {
   grid-area: mainAboutUsImage;
@@ -273,14 +252,15 @@ p {
   margin: 0.5rem;
   padding: 0.5rem;
   font-size: 25px;
-  text-align: center; }
+  text-align: center;
+  font-style: oblique; }
 
 .mainAboutUsP {
   grid-area: mainAboutUsP;
   margin: 0.5rem;
   padding: 0.5rem;
   text-align: center;
-  font-size: 14px; }
+  font-size: 16.8px; }
 
 /***********************************************************/
 /*Pagina Galeria Main*/
@@ -443,6 +423,7 @@ p {
   margin: 0.5rem;
   padding: 0.5rem;
   width: 100%;
+  border-radius: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -564,19 +545,19 @@ p {
     margin: 0.5rem;
     padding: 0.5rem;
     grid-template-areas: "mainAboutUsH2 mainAboutUsH2" "mainAboutUsImage mainAboutUsP" "mainAboutUsImage mainAboutUsP";
+    grid-row: 0.1fr 0.2fr 0.2fr;
     justify-content: center;
-    justify-items: center; }
-  .serviceSelection {
-    grid-area: ServicesSelection;
+    justify-items: center;
+    align-content: flex-start; }
+  .mainServices {
+    grid-area: main;
     display: grid;
-    margin: 0;
-    padding: 0;
-    grid-template-columns: 3fr 3fr;
-    grid-template-rows: 3fr 3fr;
+    margin: 1rem;
+    padding: 1rem;
+    grid-template: "SeccionKids" " SeccionCorporativa" "SeccionCattering " "SeccionBodas";
     justify-content: center space-between;
     align-items: center;
-    grid-row-gap: 30px;
-    grid-column-gap: 30px; }
+    grid-row-gap: 30px; }
   .mainGallery {
     grid-area: main;
     display: grid;
@@ -609,15 +590,16 @@ p {
     margin: 0.5rem;
     padding: 0.5rem;
     grid-template-areas: "mainAboutUsH2 mainAboutUsH2" "mainAboutUsImage mainAboutUsP" "mainAboutUsImage mainAboutUsP";
+    grid-row: 0.1fr 0.2fr 0.2fr;
     justify-content: center;
-    justify-items: center; }
-  .serviceSelection {
-    grid-area: ServicesSelection;
+    justify-items: center;
+    align-content: flex-start; }
+  .mainServices {
+    grid-area: main;
     display: grid;
-    margin: 0;
-    padding: 0;
-    grid-template-columns: 3fr 3fr 3fr;
-    grid-template-rows: 1fr 1fr;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    grid-template: "SeccionKids SeccionCorporativa" "SeccionCattering SeccionBodas";
     justify-content: center space-between;
     align-items: center;
     grid-row-gap: 30px;
@@ -655,19 +637,19 @@ p {
     margin: 1rem;
     padding: 1rem;
     grid-template-areas: "mainAboutUsH2 mainAboutUsH2 mainAboutUsH2" "mainAboutUsImage mainAboutUsImage mainAboutUsP" "mainAboutUsImage mainAboutUsImage mainAboutUsP";
+    grid-row: 0.1fr 0.2fr 0.2fr;
     justify-content: center;
-    justify-items: center; }
-  .serviceSelection {
-    grid-area: ServicesSelection;
+    justify-items: center;
+    align-content: flex-start; }
+  .mainServices {
+    grid-area: main;
     display: grid;
-    margin: 0;
-    padding: 0;
-    grid-template-columns: 3fr 3fr 3fr 3fr;
-    grid-template-rows: 3fr;
+    margin: 1rem;
+    padding: 1rem;
+    grid-template: "SeccionKids SeccionCorporativa" "SeccionCattering SeccionBodas";
     justify-content: center space-between;
     align-items: center;
-    grid-row-gap: 30px;
-    grid-column-gap: 30px; }
+    grid-row-gap: 30px; }
   .mainGallery {
     grid-area: main;
     display: grid;
