--- a/scss/_mainIndex.scss
+++ b/scss/_mainIndex.scss
@@ -11,6 +11,7 @@
 .mainInitVideo {
     @include grid-set (mainInitVideo, 0, 0.5rem, 0.5rem);
     width: 100%;
+    border-radius: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
