--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -216,7 +216,7 @@ p {
     @include grid-set (main, flex, 1rem, 1rem);
     flex-direction: column;
     align-content: center;
-    justify-content: center;
+    justify-content:flex-start;
 
     h2 {
         font-size: $sizeFontReviews;
