--- a/scss/_mainIndex.scss
+++ b/scss/_mainIndex.scss
@@ -17,7 +17,7 @@
     justify-content: center;
     align-items: center;
     min-height: 50vh;
-    background: url("/img/background3.png");
+    background: url("../img/background3.png");
     background-size: 150%;
     overflow: hidden;
     a {
