--- a/scss/base/_map.scss
+++ b/scss/base/_map.scss
@@ -1,9 +1,11 @@
-$colorLogo: (/*Declaracion de mapa*/
+$colorLogo: (
+    /*Declaracion de mapa*/
     principal: $colorPrincipalLogo,
     secundario:$colorSecundarioLogo
 );
 
-$colorMenu: (/*Declaracion de mapa*/
+$colorMenu: (
+    /*Declaracion de mapa*/
     principal: #42C2FF,
     secundario: #94bbe9,
     fuente: whitesmoke,
